cloud-infra-macros/tests/fails/non_zero_number_invalid_string.stderr
error: proc macro panicked
 --> tests/fails/non_zero_number_invalid_string.rs:4:15
  |
4 |     let key = non_zero_number!("not_a_number");
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("expected integer literal")
